Modificando base Swagger
